--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "backend for reservation site",
+  "description": "backend for recettes and ingredients site",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -20,7 +20,7 @@
     "nodemon": "^2.0.6"
   },
   "keywords": [
-    "Fstation"
+    "recettes"
   ],
   "author": "youssri ben taghalline",
   "license": "ISC"
