--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "popper.js": "^1.16.1",
     "vue": "^2.5.2",
     "vue-axios": "^3.2.0",
-    "vue-resource": "^1.5.1"
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.4.9"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
