--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,15 +7,11 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  name: Default
+  demands:
+   - agent.name -equals agent007 
 
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
-
 - script: |
-    npm install
-    npm run build
+    echo "hello"
   displayName: 'npm install and build'
